deployment/k8s/deployment.yaml
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: netflix-app
#   labels:
#     app: netflix-app
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: netflix-app
#   template:
#     metadata:
#       labels:
#         app: netflix-app
#     spec:
#       imagePullSecrets:
#       - name: regcred
#       containers:
#       - name: netflix-app
#         image: 684206014294.dkr.ecr.us-west-1.amazonaws.com/ajay:latest
#         imagePullPolicy: Always
#         ports:
#         - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: netflix-app
#   labels:
#     app: netflix-app
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 80
#     targetPort: 80
#   selector:
#     app: netflix-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-app
  template:
    metadata:
      labels:
        app: netflix-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: netflix-app
        image: 684206014294.dkr.ecr.us-west-1.amazonaws.com/ajay:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
  type: NodePort  # Changed from LoadBalancer to NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: netflix-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/group.name: "netflix-ingress-group"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - host: ajaymaddela.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-app
            port:
              number: 80
